thumbnail and some fixes

--- a/closetshare.html
+++ b/closetshare.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ClosetShare || Howard Chang </title>
+    <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
@@ -148,7 +149,8 @@
       <div id = "closetshare-target-audience" class = "sub-section highlight-area">
         <h2 class = "center-heading-with-line">App Target Audience</h2>
         <p>
-          People who don’t know what fashion is or how to look good, need inspirations from other. People who wants to share their fits. people who dont know where to buy certain pieces.
+          People who are unfamiliar with fashion or how to look good, and need inspirations from other people. 
+          People who wants to share their own outfits. Finally, people who dont know where to buy certain outfit pieces.
         </p>
       </div>
 
@@ -247,7 +249,7 @@
           </div>
           <div id = "closetshare-mockup-B" class = "image-with-caption">
             <img src="resources/closetshare/closetshare-mockup-B.png" alt="mockups for other screens"></img>
-            <figcaption> Mockups for the profile and outfit creation screens</figcaption>
+            <figcaption> Mockups for the profile and outfit creation screens.</figcaption>
           </div>
         </div>
 
