--- a/craftconnect.html
+++ b/craftconnect.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <title>CraftConnect || Howard Chang </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
@@ -162,10 +163,10 @@
       <div class = "sub-section flex-area">
         <div>
           <p>
-            During initial research, I <strong>pioneered the primary research process</strong> and acted as the main organizer for this phase of the project. I mapped out a number of artisan avenues and assigned each team member to investigate along with a pre-set schedule.
+            During initial research, I <strong>pioneered the primary research process</strong> helped with planning for this phase of the project. I mapped out a number of artisan avenues and assigned each team member to investigate along with a pre-set schedule.
           </p>
           <p>
-            Later on, I connected with more than 20 artisans and 5 major handcraft consumers for interviews, and served as the main interviewer throughout the entire process.
+            Later on, I contacted over 30 local artisans and major handcraft consumers, and was able to arrange 5 interviews. I also served as the main interviewer for most of the interview process.
           </p>
           <p>
             The conducted research revealed the importance of <strong>finding a niche dedicated target base</strong> for financial stability, yet currently artisans have <strong>limited opportunities to form meaningful connections</strong> with their customers. 
@@ -347,26 +348,30 @@
     <!--------------------------KEY REFLECTIONS //-------------------------------------------------->
     <section id = "key-reflections">
       <h1>Key Reflections</h1>
-      <p>
-        This project’s long time duration allows for an opportunity to perform extensive research on our initially selected subject matter, and an opportunity to 
-        diverge, converge, or repivot concept and solutions. It is through these opportunities that I truly understood the significance of always seeking external
-        and diverse perspectives and opinions.
-      </p>
-      <p>
-        When I was doing research on local artisans and their difficulty in achieving financial success,  as someone without much insight about the topic, the only 
-        solution that came to mind was “just have a good product and customer will come”.  Until I’ve actually visited these avenues, and observed how things are 
-        currently being done, as well as talking to various stakeholders, that possible points of intervention begin to emerge. In other words, <strong>none of the 
-        proposed solutions would had came to fruition without the insights gained from seeking these perspectives through field research.</strong> 
-      </p>
-      <p>
-        It is the same for the effectiveness for ideated concepts. It is through feedback from target stakeholders that we realized the possible downsides with our
-         initial ideas, and it is through the combined efforts of all team member’s unique perspectives that we finalized a list of interactions needed in the
-          booth page for facilitating connections. 
-      </p>
-      <p>
-        If we were to have more time, I would definitely advocate for additional user testing to identity further insights, potential improvements, and the 
-        effectiveness of the finalized direction. As design as this project have proven, is a <strong>continuous iterative process.</strong>
-      </p>
+      <div class = "sub-section">
+        <h2>Importance of seeking additional perspectives </h2>
+        <p>
+          This project’s long time duration allows for an opportunity to perform extensive research on our initially selected subject matter, and an opportunity to 
+          diverge, converge, or repivot concept and solutions. It is through these opportunities that I truly understood the significance of always seeking external
+          and diverse perspectives and opinions.
+        </p>
+        <p>
+          When I was doing research on local artisans and their difficulty in achieving financial success,  as someone without much insight about the topic, the only 
+          solution that came to mind was “just have a good product and customer will come”.  Until I’ve actually visited these avenues, and observed how things are 
+          currently being done, as well as talking to various stakeholders, that possible points of intervention begin to emerge. In other words, <strong>none of the 
+          proposed solutions would had came to fruition without the insights gained from seeking these perspectives through field research.</strong> 
+        </p>
+        <p>
+          It is the same for the effectiveness for ideated concepts. It is through feedback from target stakeholders that we realized the possible downsides with our
+           initial ideas, and it is through the combined efforts of all team member’s unique perspectives that we finalized a list of interactions needed in the
+            booth page for facilitating connections. 
+        </p>
+        <p>
+          If we were to have more time, I would definitely advocate for additional user testing to identity further insights, potential improvements, and the 
+          effectiveness of the finalized direction. As design as this project have proven, is a <strong>continuous iterative process.</strong>
+        </p>
+      </div>
+      
     </section>
 
     <section>
