--- a/wealthsimple.html
+++ b/wealthsimple.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wealthsimple Redesign Proposal || Howard Chang </title>
+    <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
@@ -200,7 +201,7 @@
             <h2>High Cognitive Demand</h2>
             <p>
               Research from other team members have concluded that processing new information leads to a cognitive load on the learner which can contributes 
-              towards poorer decision-making specifically with risk analysis, and increased ability to absorb new information. 
+              towards poorer decision-making specifically with risk analysis, and increased difficulty to absorb new information. 
             </p>
             <p>
               With this in mind, our investigation into new user perspectives of Wealthsimple’s interface suggested that it is overwhelming beginner users with 
