--- a/index.html
+++ b/index.html
@@ -30,25 +30,25 @@
     </header>
 
 <!--------------------------SIDE BAR //-------------------------------------------------->
-    <div id = "side-bar">
-      <div class = "side-bar-line"></div>
-      <div id = "side-bar-logo-list">
-        <a class = "social-logo" id="linkedin-logo-side" href="https://www.linkedin.com/in/howard-chang-b6b677167/"></a>
-        <a class = "social-logo" id="instagram-logo-side" href="https://www.instagram.com/mr.bubblehoneytea/"></a> 
-        <a class = "social-logo" id="github-logo-side" href="https://github.com/hcbddhc"></a> 
+    <div id="side-bar">
+      <div class="side-bar-line"></div>
+      <div id="side-bar-logo-list">
+        <a class="social-logo" id="linkedin-logo-side" href="https://www.linkedin.com/in/howard-chang-b6b677167/" target="_blank" rel="noopener noreferrer"></a>
+        <a class="social-logo" id="instagram-logo-side" href="https://www.instagram.com/mr.bubblehoneytea/" target="_blank" rel="noopener noreferrer"></a> 
+        <a class="social-logo" id="github-logo-side" href="https://github.com/hcbddhc" target="_blank" rel="noopener noreferrer"></a> 
       </div>
-      <div class = "side-bar-line"></div>
+      <div class="side-bar-line"></div>
     </div>
 
     <div id = "content">
 <!--------------------------INTRODUCTION //-------------------------------------------------->
       <section id = "introduction" class = "grid-area">
           <div id = "introduction-left">
-            <h1>I’m Howard, aspiring <em>UX/UI designer</em> and <em>web developer</em></h1>
+            <h1>Hello~ I'm Howard, aspiring <strong>product and UX/UI designer</strong></h1>
             <p>
               Studying in the SIAT program at Simon Fraser University. The act of “creating” itself has been my long-time passion, many of my achievements originating from this idea of creating something new. 
               <br><br>
-              With my past background in programming and backend development, and my current pursuit for graphic design and user experience design, I aim to deliver not just aesthetic pleasing and functional artifacts, but also an experience that is satisfying and accessible for users.
+              With my past background in programming and backend development, and my current pursuit for interface and user experience design, I aim to deliver not just aesthetic pleasing and functional artifacts, but also an experience that is satisfying and accessible for users.
               <br><br>
               Based in <em>Vancouver, BC</em>.
             </p>
@@ -133,10 +133,10 @@
         <p> howardchang822@hotmail.com <em>|</em> 778-822-6068 </p>
 
         <div id = "footer-divider">
-          <div id = "footer-divider-left">
-            <a class = "social-logo" id="linkedin-logo" href="https://www.linkedin.com/in/howard-chang-b6b677167/"></a>
-            <a class = "social-logo" id="instagram-logo" href="https://www.instagram.com/mr.bubblehoneytea/"></a> 
-            <a class = "social-logo" id="github-logo" href="https://github.com/hcbddhc"></a> 
+          <div id="footer-divider-left">
+            <a class="social-logo" id="linkedin-logo" href="https://www.linkedin.com/in/howard-chang-b6b677167/" target="_blank" rel="noopener noreferrer"></a>
+            <a class="social-logo" id="instagram-logo" href="https://www.instagram.com/mr.bubblehoneytea/" target="_blank" rel="noopener noreferrer"></a> 
+            <a class="social-logo" id="github-logo" href="https://github.com/hcbddhc" target="_blank" rel="noopener noreferrer"></a> 
           </div>
           <div id = "footer-divider-right">
             <p>Designed and Coded by<strong> Howard Chang</strong></p>
