--- a/wealthsimple.html
+++ b/wealthsimple.html
@@ -33,14 +33,14 @@
     </header>
 
    <!--------------------------SIDE BAR //-------------------------------------------------->
-   <div id = "side-bar">
-    <div class = "side-bar-line"></div>
-    <div id = "side-bar-logo-list">
-      <a class = "social-logo" id="linkedin-logo-side" href="https://www.linkedin.com/in/howard-chang-b6b677167/"></a>
-      <a class = "social-logo" id="instagram-logo-side" href="https://www.instagram.com/mr.bubblehoneytea/"></a> 
-      <a class = "social-logo" id="github-logo-side" href="https://github.com/hcbddhc"></a> 
+   <div id="side-bar">
+    <div class="side-bar-line"></div>
+    <div id="side-bar-logo-list">
+      <a class="social-logo" id="linkedin-logo-side" href="https://www.linkedin.com/in/howard-chang-b6b677167/" target="_blank" rel="noopener noreferrer"></a>
+      <a class="social-logo" id="instagram-logo-side" href="https://www.instagram.com/mr.bubblehoneytea/" target="_blank" rel="noopener noreferrer"></a> 
+      <a class="social-logo" id="github-logo-side" href="https://github.com/hcbddhc" target="_blank" rel="noopener noreferrer"></a> 
     </div>
-    <div class = "side-bar-line"></div>
+    <div class="side-bar-line"></div>
   </div>
 
    <div id = "project-content">
@@ -186,7 +186,7 @@
           analytics, distributed cognition frameworks, mental models, and information foraging theory.</strong>
         </p>
         <p>
-          While other team members were able to collect first hand perspective of a new users, as an experienced Wealthsimple user and 
+          While other team members were able to collect first hand perspective of a new user, as an experienced Wealthsimple user and 
           investor, I was able to <strong>provide additional insights based on my personal experience and investment related knowledge. </strong>
         </p>
       </div>
@@ -204,7 +204,7 @@
               towards poorer decision-making specifically with risk analysis, and increased difficulty to absorb new information. 
             </p>
             <p>
-              With this in mind, our investigation into new user perspectives of Wealthsimple’s interface suggested that it is overwhelming beginner users with 
+              With this in mind, our investigation into new user perspectives suggests that Wealthsimple’s interface is overwhelming beginner users with 
               <strong>plentiful of unknown numbers, terms, and acronyms which heavily strains working memory.</strong> 
             </p>
             <p>
@@ -255,7 +255,7 @@
               <p>
                 However, Investing as a process is quite <strong>individual oriented</strong> with social collaboration being largely absent due to investing’s
                 private nature. Additionally, investing suffers from a <strong>fragmented environment</strong> where 
-                investors need to evaluate a large number of external representations such as online forums, videos, financial news, and more to make 
+                investors need to evaluate a large number of external sources such as online forums, videos, financial news, and more to make 
                 an educated decision.
               </p>
             </div>
@@ -271,7 +271,7 @@
           <!--left-->
           <div class = "image-with-caption">
             <img src="resources/wealthsimple/wealthsimple confusing graph.png" alt="Screenshot of wealthsimple's portfolio performance graph"></img>
-            <figcaption>Wealthsimple's graph representation of user portfolio performance, in which is not really communicating much to the user.</figcaption>
+            <figcaption>Wealthsimple's graph representation of user portfolio performance, which doesn't communicate much to the user.</figcaption>
           </div>
           <!--right-->
           <div class = "numbered-title-section">
@@ -464,10 +464,10 @@
       <p> howardchang822@hotmail.com <em>|</em> 778-822-6068 </p>
 
       <div id = "footer-divider">
-        <div id = "footer-divider-left">
-          <a class = "social-logo" id="linkedin-logo" href="https://www.linkedin.com/in/howard-chang-b6b677167/"></a>
-          <a class = "social-logo" id="instagram-logo" href="https://www.instagram.com/mr.bubblehoneytea/"></a> 
-          <a class = "social-logo" id="github-logo" href="https://github.com/hcbddhc"></a> 
+        <div id="footer-divider-left">
+          <a class="social-logo" id="linkedin-logo" href="https://www.linkedin.com/in/howard-chang-b6b677167/" target="_blank" rel="noopener noreferrer"></a>
+          <a class="social-logo" id="instagram-logo" href="https://www.instagram.com/mr.bubblehoneytea/" target="_blank" rel="noopener noreferrer"></a> 
+          <a class="social-logo" id="github-logo" href="https://github.com/hcbddhc" target="_blank" rel="noopener noreferrer"></a> 
         </div>
         <div id = "footer-divider-right">
           <p>Designed and Coded by<strong> Howard Chang</strong></p>
