--- a/rabbitats.html
+++ b/rabbitats.html
@@ -33,14 +33,14 @@
     </header>
 
    <!--------------------------SIDE BAR //-------------------------------------------------->
-   <div id = "side-bar">
-    <div class = "side-bar-line"></div>
-    <div id = "side-bar-logo-list">
-      <a class = "social-logo" id="linkedin-logo-side" href="https://www.linkedin.com/in/howard-chang-b6b677167/"></a>
-      <a class = "social-logo" id="instagram-logo-side" href="https://www.instagram.com/mr.bubblehoneytea/"></a> 
-      <a class = "social-logo" id="github-logo-side" href="https://github.com/hcbddhc"></a> 
+   <div id="side-bar">
+    <div class="side-bar-line"></div>
+    <div id="side-bar-logo-list">
+      <a class="social-logo" id="linkedin-logo-side" href="https://www.linkedin.com/in/howard-chang-b6b677167/" target="_blank" rel="noopener noreferrer"></a>
+      <a class="social-logo" id="instagram-logo-side" href="https://www.instagram.com/mr.bubblehoneytea/" target="_blank" rel="noopener noreferrer"></a> 
+      <a class="social-logo" id="github-logo-side" href="https://github.com/hcbddhc" target="_blank" rel="noopener noreferrer"></a> 
     </div>
-    <div class = "side-bar-line"></div>
+    <div class="side-bar-line"></div>
   </div>
 
    <div id = "project-content">
@@ -368,10 +368,10 @@
       <p> howardchang822@hotmail.com <em>|</em> 778-822-6068 </p>
 
       <div id = "footer-divider">
-        <div id = "footer-divider-left">
-          <a class = "social-logo" id="linkedin-logo" href="https://www.linkedin.com/in/howard-chang-b6b677167/"></a>
-          <a class = "social-logo" id="instagram-logo" href="https://www.instagram.com/mr.bubblehoneytea/"></a> 
-          <a class = "social-logo" id="github-logo" href="https://github.com/hcbddhc"></a> 
+        <div id="footer-divider-left">
+          <a class="social-logo" id="linkedin-logo" href="https://www.linkedin.com/in/howard-chang-b6b677167/" target="_blank" rel="noopener noreferrer"></a>
+          <a class="social-logo" id="instagram-logo" href="https://www.instagram.com/mr.bubblehoneytea/" target="_blank" rel="noopener noreferrer"></a> 
+          <a class="social-logo" id="github-logo" href="https://github.com/hcbddhc" target="_blank" rel="noopener noreferrer"></a> 
         </div>
         <div id = "footer-divider-right">
           <p>Designed and Coded by<strong> Howard Chang</strong></p>
