rolled back some changes, and make project description more concise.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <h2>Rabbitats Website Redesign</h2>
                 <p>/2023</p>
               </div>
-              <p>Strategy to improve the organization website for the rabbit rescue society Rabbitats. This project demonstrates proper problem framing given constraints, and proper brainstormed solutions based on user and client research. As well as slide deck design.</p>
+              <p>Strategy to improve the organization website for the rabbit rescue society Rabbitats through highlighting its education aspects.</p>
               <div class = "project-select-icon"></div>
             </div>
           </a> <!-- rabbitat -->
@@ -117,7 +117,7 @@
                 <h2>Macaron</h2>
                 <p>/2024</p>
               </div>
-              <p>A brand and website created from scratch. The website aim to provide a seamingless and satisfying macaron purchase experience, while preserving its visual identity. Latest standout project where I've put my programming skills into use.</p>
+              <p>A brand and website that aims to provide a seamingless and satisfying macaron purchase experience, while preserving its visual identity.</p>
               <div class = "project-select-icon"></div>
             </div>
           </a> <!-- macaron -->
