make vertical spacing slightly wider

--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
     <!--------------------------CURRENT PERSONAL GOAL CHECKLIST//-------------------------------------------------->
     <section id = "goal check list">
       <h1>Current Personal Goal Checklist</h1>
-      <div id = "about-lists-of-goals" class = "grid-area">
+      <div id = "about-lists-of-goals" class = "grid-area sub-section">
         <!--Column 1-->
         <div class = "about-single-goal-list">
           <div class = "about-goal">
@@ -201,13 +201,11 @@
           </div>
         </div>
       </div>
-      
-    </section>
 
-    <section>
       <button class="button" onclick="location.href='index.html#projects'">
         &larr; See my work!
       </button>
+      
     </section>
   </div>
 
