--- a/macaron.html
+++ b/macaron.html
@@ -309,19 +309,18 @@
     <!--------------------------KEY REFLECTIONS //-------------------------------------------------->
     <section id = "key-reflections">
       <h1>Key Reflections</h1>
-      <p>
-        For this project, instead of focusing on more creative decisions, such as which font to use, which colour is fitting for the brand, 
-        what kind of aesthetics should the site utilize, my focus was to take into account an existing brand and aesthetics, and figure out a way to
-         best make it shine, as well as focusing on the user experience as they navigate through the site.
-      </p>
-      <p>
-        Moreover, as the project involves more than just design, and involves the development of the website as well using HTML, this highlighted the importance of 
-        clear communication between team members for me, especially through proper code organization and clear comments. Maintaining a structured and well 
-        documented codebase was essential to ensure smooth development and effective collaboration.
-      </p>
-    </section>
-
-    <section>
+      <div class = "sub-section">
+        <p>
+          For this project, instead of focusing on more creative decisions, such as which font to use, which colour is fitting for the brand, 
+          what kind of aesthetics should the site utilize, my focus was to take into account an existing brand and aesthetics, and figure out a way to
+           best make it shine, as well as focusing on the user experience as they navigate through the site.
+        </p>
+        <p>
+          Moreover, as the project involves more than just design, and involves the development of the website as well using HTML, this highlighted the importance of 
+          clear communication between team members for me, especially through proper code organization and clear comments. Maintaining a structured and well 
+          documented codebase was essential to ensure smooth development and effective collaboration.
+        </p>
+      </div>
       <button class="button" onclick="location.href='index.html#projects'">
         &larr; See my other work!
       </button>
