--- a/rabbitats.html
+++ b/rabbitats.html
@@ -336,24 +336,23 @@
     <!--------------------------KEY REFLECTIONS //-------------------------------------------------->
     <section id = "key-reflections">
       <h1>Key Reflections</h1>
-      <p>
-        This month long project is one of my first cracks into a time based collaborative design project, as well as the experience of 
-        playing more of a leadership role. 
-      </p>
-      <p>
-        One key aspect of this redesign is the need for a <strong>realistic yet still effective scoping</strong> for the prototype. Given the time limit, 
-        I’ve determined that it is key to target specific weak points on the website (after researching the client and its goals) instead 
-        of redesigning the entire website. As too large of a scope will result in the team being too spread out, leading to a less 
-        effective redesign.
-      </p>
-      <p>
-        Another key is the <strong>importance of proper research</strong>, and the need to <strong>personalize the design strategy for each client</strong>. The main problems
-         and associated solutions are all rooted back to our extensive research on the organization itself and the environmental concerns 
-         surrounding it. Without that knowledge and the organization’s needs in mind, the solution would not had been as appropriate. 
-      </p>
-    </section>
-
-    <section>
+      <div class = "sub-section">
+        <p>
+          This month long project is one of my first cracks into a time based collaborative design project, as well as the experience of 
+          playing more of a leadership role. 
+        </p>
+        <p>
+          One key aspect of this redesign is the need for a <strong>realistic yet still effective scoping</strong> for the prototype. Given the time limit, 
+          I’ve determined that it is key to target specific weak points on the website (after researching the client and its goals) instead 
+          of redesigning the entire website. As too large of a scope will result in the team being too spread out, leading to a less 
+          effective redesign.
+        </p>
+        <p>
+          Another key is the <strong>importance of proper research</strong>, and the need to <strong>personalize the design strategy for each client</strong>. The main problems
+           and associated solutions are all rooted back to our extensive research on the organization itself and the environmental concerns 
+           surrounding it. Without that knowledge and the organization’s needs in mind, the solution would not had been as appropriate. 
+        </p>
+      </div>
       <button class="button" onclick="location.href='index.html#projects'">
         &larr; See my other work!
       </button>
