--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="navigation-items">
             <a href="index.html#projects">My Works</a>
             <a href="about.html">About</a>
-            <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">Resume</a>
+            <a href="https://drive.google.com/file/d/1ql-y7xnuWvTgu4U-2e-PBAdfqSrUpSUy/view?usp=sharing" target="_blank" rel="noopener noreferrer">Resume</a>
           </div>
         </nav>
       </div>
