remade intro section for home page

--- a/index.html
+++ b/index.html
@@ -44,13 +44,21 @@
 <!--------------------------INTRODUCTION //-------------------------------------------------->
       <section id = "introduction" class = "grid-area">
           <div id = "introduction-left">
-            <h1>Hello~ I'm Howard, aspiring <strong>product and UX/UI designer</strong></h1>
+            <div id = "title-heading">
+              <h1 id = "heading-hello-howard">I'm Howard......</h1>
+              <h1 id ="heading-digital-product-designer">
+                <span>DIGITAL</span>
+                <span>PRODUCT</span>
+                <span><strong>DESIGNER</strong></span>
+              </h1>
+            </div>
             <p>
-              Studying in the SIAT program at Simon Fraser University. The act of “creating” itself has been my long-time passion, many of my achievements originating from this idea of creating something new. 
-              <br><br>
-              With my past background in programming and backend development, and my current pursuit for interface and user experience design, I aim to deliver not just aesthetic pleasing and functional artifacts, but also an experience that is satisfying and accessible for users.
-              <br><br>
-              Based in <em>Vancouver, BC</em>.
+              I’m a SIAT student at Simon Fraser University with a background in <strong>design, computing science, and business</strong>. I seek to create lasting impact in the world through
+              my diverse background, and my dedication to <strong>connect with people</strong> and resolve their problems.
+            </p>
+            <p>
+              <br>
+              Based in <strong>Vancouver, BC</strong>.
             </p>
           </div>
           <div id = "introduction-right">
