finally added lines for landing

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
           <div id = "introduction-left">
             <div id = "title-heading">
               <h1 id = "heading-hello-howard">I'm Howard......</h1>
-              <h1 id ="heading-digital-product-designer">
-                <span>DIGITAL</span>
-                <span>PRODUCT</span>
-                <span><strong>DESIGNER</strong></span>
-              </h1>
+              <div id ="heading-digital-product-designer">
+                <h1>DIGITAL</h1>
+                <h1>PRODUCT</h1>
+                <h1><strong>DESIGNER</strong></h1>
+              </div>
             </div>
             <p>
               I’m a SIAT student at Simon Fraser University with a background in <strong>design, computing science, and business</strong>. I seek to create lasting impact in the world through
